# nvme-kv-engine

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SETUP-INSTRUCTIONS.md  SSDVerification.md  run-example.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-docker.yml
.zed/: settings.json
benchmarks/: CMakeLists.txt  bench_dma_pool.c  bench_kv_capacity.c  bench_kv_stress.c  bench_threading.c  bench_throughput.c  test_memory_pool.c
benchmarks/fio/: bdev_multi_ssd.json  multi_ssd_fileio.fio  multi_ssd_fileio_full.fio  multi_ssd_full_bench.fio  multi_ssd_randrw.fio
benchmarks/util/: bench_utils.c  bench_utils.h
docker/: container.sh  dockerfile
docker/dev/: build_dev.sh  dockerfile
docs/: NVMEVIRT_SETUP.md  device_enumeration.md  health_monitoring.md
examples/: CMakeLists.txt  async_example.c  check_kv_support.c  hardware_cache_testing.c  health_example.c  multi_device_example.c  simple_cache.c  simple_store.c
include/: kv_engine.h
lib/KVSSD/PDK/core/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  env_init.conf  sample_code_async  sample_code_sync
lib/KVSSD/PDK/core/sample_code/: test_sync.cpp
lib/KVSSD/PDK/core/src/api/src/: cfrontend.cpp
lib/KVSSD/PDK/core/src/device_abstract_layer/kernel_driver_adapter/: kadi.h
lib/spdk/dpdkbuild/: Makefile
scripts/: build-for-nvmevirt.sh  build-nvmevirt.sh  build.sh  build_with_test.sh  clang_format.sh  exec.sh  exec_into_docker_with_build.sh  run_capstone_benchmarks.sh  run_examples.sh  run_fio_bench.sh  setup_emulated_ssds.sh  setup_fio_spdk.sh  summarize_capstone_benchmarks.py  temp_capstone.sh  test_multi_ssd.sh
scripts/util/: build.sh  build_docker.sh  run_benchmark.sh  run_capstone_inside.sh
src/async/: async_ops.c
src/core/: kv_engine.c  kv_engine_health.c  kv_engine_internal.h  kv_engine_multi_device.c
src/utils/: dma_alloc.c  dma_alloc.h  dma_pool.c  dma_pool.h  hashTable.h  memory_pool.c  memory_pool.h  thread_pool.c
testing/simpleTests/: simple_store.c
